// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for default state 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-9"
  >
    <div>
      <h6
        className="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      />
    </div>
    <div>
      <span
        className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
        style={
          {
            "height": 10,
            "marginBottom": "12px",
            "marginTop": "4px",
            "width": 200,
          }
        }
      />
      <span
        className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
        style={
          {
            "height": 10,
            "marginBottom": "12px",
            "marginTop": "4px",
            "width": "100%",
          }
        }
      />
      <span
        className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
        style={
          {
            "height": 10,
            "marginBottom": "12px",
            "marginTop": "4px",
            "width": "100%",
          }
        }
      />
      <span
        className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
        style={
          {
            "height": 10,
            "marginBottom": "12px",
            "marginTop": "4px",
            "width": 125,
          }
        }
      />
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-9"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-9"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-9"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-9"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 250,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-9"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-10 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-11 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-12"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for defined product with sensor / with default selection 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-43"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <b>
          Sensor:
        </b>
        <span
          style={
            {
              "marginLeft": "4px",
            }
          }
        >
          product sensor 123
        </span>
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-43"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-43"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-43"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-43"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 250,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-43"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-44 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-45 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-46"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for defined product without sensor / with default selection 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-26"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-26"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-26"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-26"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-26"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 250,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-26"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-27 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-28 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-29"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with axes 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-128"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-128"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-128"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-128"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-128"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 250,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-128"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-129 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-130 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Time step:
              </span>
              30min
            </div>
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Roll period:
              </span>
              5 hour
            </div>
          </td>
        </tr>
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-129 css-ezqyqq-MuiTableCell-root"
          >
            y1
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-130 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Scale:
              </span>
              Linear
            </div>
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Units:
              </span>
              meters
            </div>
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Range:
              </span>
              From Zero (0 - 36.7 meters)
            </div>
          </td>
        </tr>
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-129 css-ezqyqq-MuiTableCell-root"
          >
            y2
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-130 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Scale:
              </span>
              Linear
            </div>
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Units:
              </span>
              degrees
            </div>
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-131"
              >
                Range:
              </span>
              Centered (10 - 30 degrees)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with only date range 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-77"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-77"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-77"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-77"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Apr 2018 - Jan 2020 (1 year, 10 months)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-77"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 250,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-77"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-78 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-79 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-80"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with only sites 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-60"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-60"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-60"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      ABBY - 000.010, 000.020
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      BARR - 000.030
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-60"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-60"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 250,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-60"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-61 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-62 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-63"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with only variables 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-94"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-94"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-94"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-94"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-94"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      var1, var2
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-94"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-95 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-96 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-97"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TimeSeriesViewerContainer TimeSeriesViewerSummary Renders for selection with variables and qualityFlags 1`] = `
<div>
  <div
    className="makeStyles-summaryDiv-111"
  >
    <div
      style={
        {
          "marginRight": "8px",
        }
      }
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Data Product
      </h6>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          href="https://data.neonscience.org/data-products/DP0.00000.000"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            {
              "fontWeight": 600,
            }
          }
          target="_blank"
        >
          Foo product - (DP0.00000.000)
        </a>
      </p>
    </div>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        This is a product that products
      </p>
    </div>
  </div>
  <div
    className="makeStyles-summaryDiv-111"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Release
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Latest released and provisional data (release: unknown)
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-111"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Sites & Positions
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 175,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-111"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Date Range
    </h6>
    <span
      className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 10,
          "marginBottom": "12px",
          "marginTop": "4px",
          "width": 300,
        }
      }
    />
  </div>
  <div
    className="makeStyles-summaryDiv-111"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      Variables
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      var1, var2
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      Quality flags: qfA, qfB, qfC
    </p>
  </div>
  <div
    className="makeStyles-summaryDiv-111"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
    >
      x/y Axes
    </h6>
    <table
      className="MuiTable-root css-x9dllz-MuiTable-root"
      role={null}
    >
      <tbody
        className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisTitle-112 css-ezqyqq-MuiTableCell-root"
          >
            x
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall makeStyles-axisSettings-113 css-ezqyqq-MuiTableCell-root"
          >
            <div
              style={
                {
                  "marginRight": "16px",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                className="makeStyles-axisSettingTitle-114"
              >
                Time step:
              </span>
              Auto (null)
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
